--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -12,43 +12,87 @@
     "reports": "件"
   },
   "企業の皆様・はたらく皆様へ": "企業の皆様・はたらく皆様へ",
-  "当サイトについて": "当サイトについて",
-  "ブラウザ環境について": "ブラウザ環境について",
-  "当サイトは以下の環境でご覧いただくことを推奨いたします。": "当サイトは以下の環境でご覧いただくことを推奨いたします。",
-  "Microsoft Edge 最新版": "Microsoft Edge 最新版",
-  "Mozilla Firefox 最新版": "Mozilla Firefox 最新版",
-  "Google Chrome 最新版（Windows 10以上, Android 8.0以上）": "Google Chrome 最新版（Windows 10以上, Android 8.0以上）",
-  "Safari 最新版（macOS, iOS）": "Safari 最新版（macOS, iOS）",
-  "※ 推奨環境以外で利用された場合や、推奨環境下でもご利用のブラウザの設定等によっては、正しく表示されない場合がありますのでご了承ください。": "推奨環境以外で利用された場合や、推奨環境下でもご利用のブラウザの設定等によっては、正しく表示されない場合がありますのでご了承ください。",
-  "当サイトへのリンクについて": "当サイトへのリンクについて",
-  "当サイトへのリンクは自由です。": "当サイトへのリンクは自由です。",
-  "JavaScriptについて": "JavaScriptについて",
-  "当サイトではJavaScriptを使用しております。": "当サイトではJavaScriptを使用しております。",
-  "JavaScriptを無効にして使用された場合、各ページが正常に動作しない、または、表示されない場合がございます。": "JavaScriptを無効にして使用された場合、各ページが正常に動作しない、または、表示されない場合がございます。",
-  "当サイトをご利用の際には、JavaScriptを有効にして頂きますようお願いいたします。": "当サイトをご利用の際には、JavaScriptを有効にして頂きますようお願いいたします。",
-  "クッキー (Cookie) について": "クッキー (Cookie) について",
-  "当サイトの一部ではクッキーを使用しています。": "当サイトの一部ではクッキーを使用しています。",
-  "クッキーとは、Webコンテンツからの要求で利用者の手元の端末に一時的に保存されるデータのことで、当サイトでは利用状況の把握のためにクッキーを使用する場合があります。": "クッキーとは、Webコンテンツからの要求で利用者の手元の端末に一時的に保存されるデータのことで、当サイトでは利用状況の把握のためにクッキーを使用する場合があります。",
-  "ブラウザに関する情報の収集を希望しない場合は、インターネット閲覧ソフト（ブラウザ）をご自身で設定することにより、クッキーの機能が働かないようにすることも可能です。": "ブラウザに関する情報の収集を希望しない場合は、インターネット閲覧ソフト（ブラウザ）をご自身で設定することにより、クッキーの機能が働かないようにすることも可能です。",
-  "ただし、クッキーを受け入れない設定をされている場合は、当サイトの機能が正常に動作しない場合がございます。": "ただし、クッキーを受け入れない設定をされている場合は、当サイトの機能が正常に動作しない場合がございます。",
-  "Google Analyticsの利用について": "Google Analyticsの利用について",
-  "当サイトでは、サービス向上やサイトの改善のためにGoogle LLCの提供するアクセス分析のツールであるGoogle Analyticsを利用した計測を行っております。": "当サイトでは、サービス向上やサイトの改善のためにGoogle LLCの提供するアクセス分析のツールであるGoogle Analyticsを利用した計測を行っております。",
-  "Google Analyticsでは、当サイトが発行するクッキー (Cookie) 等を利用して、Webサイトの利用データ（アクセス状況、トラフィック、閲覧環境、IPアドレスなど）を収集しております。クッキーの利用に関してはGoogleのプライバシーポリシーと規約に基づいております。": "Google Analyticsでは、当サイトが発行するクッキー (Cookie) 等を利用して、Webサイトの利用データ（アクセス状況、トラフィック、閲覧環境、IPアドレスなど）を収集しております。クッキーの利用に関してはGoogleのプライバシーポリシーと規約に基づいております。",
-  "取得したデータはWebサイト利用状況を分析しサービスの改善につなげるため、またはサイト運営者へのレポートを作成するため、その他のサービスの提供に関わる目的に限り、これを使用します。（サイト運営者へのレポートでは、クッキーはブラウザ単位で本サイトのユーザー数をカウントするため、IPアドレスはGoogle Analyticsの分析機能を通じてアクセス元の地域分布（国、州・都道府県、都市）を把握するために利用されています。）": "取得したデータはWebサイト利用状況を分析しサービスの改善につなげるため、またはサイト運営者へのレポートを作成するため、その他のサービスの提供に関わる目的に限り、これを使用します。（サイト運営者へのレポートでは、クッキーはブラウザ単位で本サイトのユーザー数をカウントするため、IPアドレスはGoogle Analyticsの分析機能を通じてアクセス元の地域分布（国、州・都道府県、都市）を把握するために利用されています。）",
-  "Google Analyticsの利用規約及びプライバシーポリシーに関する説明については、Google Analyticsのサイトをご覧ください。": "Google Analyticsの利用規約及びプライバシーポリシーに関する説明については、Google Analyticsのサイトをご覧ください。",
-  "Google Analytics利用規約": "Google Analytics利用規約",
-  "Googleのプライバシーポリシー": "Googleのプライバシーポリシー",
-  "Google Analyticsに関する詳細情報": "Google Analyticsに関する詳細情報",
-  "Google Analyticsによる情報送信を回避する場合は、Google がサポートする{addon}をご利用ください。": "Google Analyticsによる情報送信を回避する場合は、Google がサポートする{addon}をご利用ください。",
-  "https://tools.google.com/dlpage/gaoptout?hl=ja": "https://tools.google.com/dlpage/gaoptout?hl=ja",
-  "測定を無効にするブラウザ アドオン": "測定を無効にするブラウザ アドオン",
-  "免責事項": "免責事項",
-  "また、利用者が当サイトを利用したことにより発生した利用者の損害及び利用者が第三者に与えた損害に対して、責任を負うものではありません。": "また、利用者が当サイトを利用したことにより発生した利用者の損害及び利用者が第三者に与えた損害に対して、責任を負うものではありません。",
-  "当サイトに掲載されている情報は、予告なしに変更又は削除することがあります。": "当サイトに掲載されている情報は、予告なしに変更又は削除することがあります。",
-  "ソースコードについて": "ソースコードについて",
-  "当サイトのソースコードはMITライセンスで公開されており、誰でも自由に利用することができます。": "当サイトのソースコードはMITライセンスで公開されており、誰でも自由に利用することができます。",
-  "詳しくは、{githubRepo}をご確認ください。": "詳しくは、{githubRepo}をご確認ください。",
-  "GitHub リポジトリ": "GitHub リポジトリ",
+  "About": {
+    "h2": "当サイトについて",
+    "a": [
+      "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。運営・開発は県内の有志によってボランティアで行われています。",
+      "岩手県による公式情報と客観的な数値をわかりやすく伝えることで、岩手県にお住まいの方や、岩手県内に拠点を持つ企業の方、岩手県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。"
+    ],
+    "b": [
+      "ブラウザ環境について",
+      "当サイトは以下の環境でご覧いただくことを推奨いたします。",
+      [
+        "Microsoft Edge 最新版",
+        "Mozilla Firefox 最新版",
+        "Google Chrome 最新版（Windows 10以上, Android 8.0以上）",
+        "Safari 最新版（macOS, iOS）"
+      ],
+      "推奨環境以外で利用された場合や、推奨環境下でもご利用のブラウザの設定等によっては、正しく表示されない場合がありますのでご了承ください。"
+    ],
+    "c": [
+      "当サイトへのリンクについて",
+      "当サイトへのリンクは自由です。"
+    ],
+    "d": [
+      "JavaScriptについて",
+      [
+        "当サイトではJavaScriptを使用しております。",
+        "JavaScriptを無効にして使用された場合、各ページが正常に動作しない、または、表示されない場合がございます。",
+        "当サイトをご利用の際には、JavaScriptを有効にして頂きますようお願いいたします。"
+      ]
+    ],
+    "e": [
+      "クッキー (Cookie) について",
+      [
+        "当サイトの一部ではクッキーを使用しています。",
+        "クッキーとは、Webコンテンツからの要求で利用者の手元の端末に一時的に保存されるデータのことで、当サイトでは利用状況の把握のためにクッキーを使用する場合があります。",
+        "ブラウザに関する情報の収集を希望しない場合は、インターネット閲覧ソフト（ブラウザ）をご自身で設定することにより、クッキーの機能が働かないようにすることも可能です。",
+        "ただし、クッキーを受け入れない設定をされている場合は、当サイトの機能が正常に動作しない場合がございます。"
+      ]
+    ],
+    "f": [
+      "Google Analyticsの利用について",
+      [
+        "当サイトでは、サービス向上やサイトの改善のためにGoogle LLCの提供するアクセス分析のツールであるGoogle Analyticsを利用した計測を行っております。",
+        "Google Analyticsでは、当サイトが発行するクッキー (Cookie) 等を利用して、Webサイトの利用データ（アクセス状況、トラフィック、閲覧環境、IPアドレスなど）を収集しております。クッキーの利用に関してはGoogleのプライバシーポリシーと規約に基づいております。",
+        "取得したデータはWebサイト利用状況を分析しサービスの改善につなげるため、またはサイト運営者へのレポートを作成するため、その他のサービスの提供に関わる目的に限り、これを使用します。（サイト運営者へのレポートでは、クッキーはブラウザ単位で本サイトのユーザー数をカウントするため、IPアドレスはGoogle Analyticsの分析機能を通じてアクセス元の地域分布（国、州・都道府県、都市）を把握するために利用されています。）",
+        "Google Analyticsの利用規約及びプライバシーポリシーに関する説明については、Google Analyticsのサイトをご覧ください。"
+      ],
+      [
+        [
+          "Google Analytics利用規約",
+          "https://marketingplatform.google.com/about/analytics/terms/jp/"
+        ],
+        [
+          "Googleのプライバシーポリシー",
+          "https://policies.google.com/privacy?hl=ja"
+        ],
+        [
+          "Google Analyticsに関する詳細情報",
+          "https://support.google.com/analytics/answer/6004245?hl=ja"
+        ]
+      ],
+      [
+        "Google Analyticsによる情報送信を回避する場合は、Google がサポートする{addon}をご利用ください。",
+        "https://tools.google.com/dlpage/gaoptout?hl=ja",
+        "測定を無効にするブラウザ アドオン"
+      ]
+    ],
+    "g": [
+      "免責事項",
+      [
+        "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
+        "また、利用者が当サイトを利用したことにより発生した利用者の損害及び利用者が第三者に与えた損害に対して、責任を負うものではありません。",
+        "当サイトに掲載されている情報は、予告なしに変更又は削除することがあります。"
+      ]
+    ],
+    "h": [
+      "ソースコードについて",
+      "当サイトのソースコードはMITライセンスで公開されており、誰でも自由に利用することができます。",
+      "詳しくは、{githubRepo}をご確認ください。",
+      "GitHub リポジトリ"
+    ]
+  },
   "このページはご利用いただけません": "このページはご利用いただけません",
   "現在ご利用できません": "現在ご利用できません",
   "アクセスしようとしたページが見つかりませんでした。": "アクセスしようとしたページが見つかりませんでした。",
@@ -82,16 +126,12 @@
   "{date}の合計": "%{date}の合計",
   "最新のお知らせ": "最新のお知らせ",
   "新型コロナウイルス感染症にかかる相談窓口について": "新型コロナウイルス感染症にかかる相談窓口について",
-  "※": "※",
   "別タブで開く": "別タブで開く",
   "2次元コード": "2次元コード",
   "※最新の情報はWebページをご覧ください": "※最新の情報はWebページをご覧ください",
   "ogp": {
     "og:image": "https://iwate.stopcovid19.jp/ogp.png"
   },
-  "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/jp/",
-  "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=ja",
-  "https://support.google.com/analytics/answer/6004245?hl=ja": "https://support.google.com/analytics/answer/6004245?hl=ja",
   "{title}のグラフをシェア": "{title}のグラフをシェア",
   "閉じる": "閉じる",
   "クリップボードにコピー": "クリップボードにコピー",
@@ -100,7 +140,6 @@
   "facebookで{title}のグラフをシェア": "facebookで{title}のグラフをシェア",
   "日付": "日付",
   "{title}のグラフ": "{title}のグラフ",
-  "Opera 最新版": "Opera 最新版",
   "強い症状": "強い症状",
   "妊娠中の方、重症化しやすい方（高齢者、糖尿病、心不全、呼吸器疾患（COPD等）等の基礎疾患がある方や透析を受けている方、免疫抑制剤や抗がん剤等を用いている方）はすぐに、それ以外の方は症状が４日以上続いた場合は必ず、相談してください。": "妊娠中の方、重症化しやすい方（高齢者、糖尿病、心不全、呼吸器疾患（COPD等）等の基礎疾患がある方や透析を受けている方、免疫抑制剤や抗がん剤等を用いている方）はすぐに、それ以外の方は症状が４日以上続いた場合は必ず、相談してください。",
   "症状には個人差がありますので、強い症状と思う場合にはすぐに相談してください。解熱剤などを飲み続けなければならない方も同様です。": "症状には個人差がありますので、強い症状と思う場合にはすぐに相談してください。解熱剤などを飲み続けなければならない方も同様です。",
@@ -138,7 +177,6 @@
   "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上",
   "新型コロナウイルス感染症対策本部": "新型コロナウイルス感染症対策本部",
   "業種ごとの感染拡大予防ガイドライン": "業種ごとの感染拡大予防ガイドライン",
-  "岩手県による公式情報と客観的な数値をわかりやすく伝えることで、岩手県にお住まいの方や、岩手県内に拠点を持つ企業の方、岩手県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "岩手県による公式情報と客観的な数値をわかりやすく伝えることで、岩手県にお住まいの方や、岩手県内に拠点を持つ企業の方、岩手県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。",
   "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。": "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。",
   "新型コロナウイルス感染症相談窓口": "新型コロナウイルス感染症相談窓口",
   "岩手県新型コロナウイルス感染症関連情報": "岩手県新型コロナウイルス感染症関連情報",
@@ -147,7 +185,6 @@
   "陽性率：陽性判明数（PCR・抗原）の移動平均／検査件数（＝陽性判明数（PCR・抗原）＋陰性判明数（PCR・抗原））の移動平均": "陽性率：陽性判明数（PCR・抗原）の移動平均／検査件数（＝陽性判明数（PCR・抗原）＋陰性判明数（PCR・抗原））の移動平均",
   "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
   "ふりがな": "ふりがな",
-  "運営・開発は県内の有志によってボランティアで行われています。": "運営・開発は県内の有志によってボランティアで行われています。",
   "24時間 全日（土日・祝日を含む）": "24時間 全日（土日・祝日を含む）",
   "主に「症状がある方からの受診等に関する相談」を計上": "主に「症状がある方からの受診等に関する相談」を計上",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）",
@@ -159,7 +196,6 @@
   "対策サイト非公式": "対策サイト非公式",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）",
   "県民の皆様へ": "県民の皆様へ",
-  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を折れ線グラフで示す（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を折れ線グラフで示す（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）",
   "窓口を開設した2020年2月8日からのデータを表示": "窓口を開設した2020年2月8日からのデータを表示",
   "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。",
@@ -317,7 +353,6 @@
   "陽性者数/人口": "陽性者数/人口",
   "入院と宿泊療養の推移": "入院と宿泊療養の推移",
   "県内": "県内",
-  "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
   "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
   "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
   "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない",
