--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -54,7 +54,7 @@
       "About the using of Google Analytics",
       [
         "This site uses Google Analytics, an analytics service provided by Google LLC, to track website activity for site improvement and provision of better services.",
-        "Google Analytics uses Cookies to collect anonymous usage data(page views, traffic, used OS/browser information and so on). We use {Cookies based on Google's privacy policy and terms.",
+        "Google Analytics uses Cookies to collect anonymous usage data(page views, traffic, used OS/browser information and so on). We use Cookies based on Google's privacy policy and terms.",
         "The collected data will be used only to analyze website usage and services improvement, or to create reports for publishers, and only to provide other services. (In the report to publishers, cookies count the number of users of this site on a browser-by-browser basis. Google Analytics uses the IP address analysis function to determine the geographical distribution of the access source (country, state / prefecture, city)",
         "For more about Google Analytics Terms of Service and Privacy Policy, please visit the Google Analytics site."
       ],
