--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -309,13 +309,12 @@
   "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。": "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。",
   "岩手県 / 第19回本部員会議資料【資料4-1】[PDF]": "Iwate Prefecture's 19th HQ Members Meeting Document. [4-1] [JA/PDF]",
   "岩手県の1日あたりの検査可能件数は864件": "岩手県の1日あたりの検査可能件数は864件",
-  "件・PCR検査が": "件・PCR検査が",
   "岩手のCOVID-19が気になる有志": "Volunteers who are interested in COVID-19 in Iwate",
   "人です。": "人です。",
   "{date}": "{date}",
+  "は陽性が": "は陽性が",
+  "件・検査が": "件・検査が",
   "件・現在の入院患者は": "件・現在の入院患者は",
-  "件・抗原検査が": "件・抗原検査が",
-  "は陽性件数が": "は陽性件数が",
   "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。",
   "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。",
   "県外": "Outside Iwate",
