--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -73,7 +73,6 @@
         ]
       ],
       [
-        "Google Analyticsによる情報送信を回避する場合は、Google がサポートする{addon}をご利用ください。",
         "https://tools.google.com/dlpage/gaoptout?hl=ja",
         "測定を無効にするブラウザ アドオン"
       ]
@@ -89,10 +88,11 @@
     "h": [
       "ソースコードについて",
       "当サイトのソースコードはMITライセンスで公開されており、誰でも自由に利用することができます。",
-      "詳しくは、{githubRepo}をご確認ください。",
       "GitHub リポジトリ"
     ]
   },
+  "GA{addon}": "Google Analyticsによる情報送信を回避する場合は、Google がサポートする{addon}をご利用ください。",
+  "GH{githubRepo}": "詳しくは、{githubRepo}をご確認ください。",
   "このページはご利用いただけません": "このページはご利用いただけません",
   "現在ご利用できません": "現在ご利用できません",
   "アクセスしようとしたページが見つかりませんでした。": "アクセスしようとしたページが見つかりませんでした。",
