--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -205,6 +205,7 @@
   "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。",
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
   "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
+  "岩手県の発表漏れによりデータの存在しない日がある": "岩手県の発表漏れによりデータの存在しない日がある",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
   "検査件数（７日間移動平均）": "検査件数（７日間移動平均）",
   "抗原検査件数": "抗原検査件数",
