--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,17 +1,32 @@
 {
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ",
   "相談の手順を見る": "相談の手順を見る",
-  "検査陽性者の状況": "検査陽性者の状況",
+  "Common": {
+    "当サイトについて": "当サイトについて",
+    "陽性者数": "陽性者数",
+    "累計": "累計",
+    "人": "人",
+    "入院": "入院",
+    "重症": "重症",
+    "宿泊療養": "宿泊療養"
+  },
+  "Details": {
+    "a": [
+      "検査陽性者の状況",
+      "自宅療養",
+      "入院・療養等調整中",
+      "退院等",
+      "死亡"
+    ]
+  },
   "PCR検査実施件数": "PCR検査実施件数",
   "テーブルを表示": "テーブルを表示",
   "{date}の累計": "{date}の累計",
-  "人": "人",
   "件": {
     "tested": "件",
     "reports": "件"
   },
   "About": {
-    "h2": "当サイトについて",
     "a": [
       "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。運営・開発は県内の有志によってボランティアで行われています。",
       "岩手県による公式情報と客観的な数値をわかりやすく伝えることで、岩手県にお住まいの方や、岩手県内に拠点を持つ企業の方、岩手県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。"
@@ -97,8 +112,6 @@
   "ページが移動または削除されたか、URLの入力間違いの可能性があります。": "ページが移動または削除されたか、URLの入力間違いの可能性があります。",
   "トップページへ戻る": "トップページへ戻る",
   "陽性者数": "陽性者数",
-  "重症": "重症",
-  "死亡": "死亡",
   "日別": "日別",
   "累計": "累計",
   "{date} 更新": "{date} 更新",
@@ -156,9 +169,6 @@
   "発熱や咳などの{minorSymptom}がある": "発熱や咳などの{minorSymptom}がある",
   "日別値": "日別値",
   "陽性率": "陽性率",
-  "入院": "入院",
-  "自宅療養": "自宅療養",
-  "宿泊療養": "宿泊療養",
   "1ページ当たり": "1ページ当たり",
   "{itemsLength} 項目中 {pageStart} - {pageStop} ": "{itemsLength} 項目中 {pageStart} - {pageStop} ",
   "現在判明している人数であり、後日修正される場合がある": "現在判明している人数であり、後日修正される場合がある",
@@ -167,7 +177,6 @@
   "接触歴等判明者数": "接触歴等判明者数",
   "接触歴等不明者数": "接触歴等不明者数",
   "重症患者数": "重症患者数",
-  "入院・療養等調整中": "入院・療養等調整中",
   "確定日別による陽性者数の推移": "確定日別による陽性者数の推移",
   "速報値として公表するものであり、後日確定データとして修正される場合がある": "速報値として公表するものであり、後日確定データとして修正される場合がある",
   "検査結果の判明日を基準とする": "検査結果の判明日を基準とする",
@@ -329,7 +338,6 @@
   "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」": "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」",
   "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
-  "個別事例の症状は公表されないので、重症などは公表された場合は更新": "個別事例の症状は公表されないので、重症などは公表された場合は更新",
   "通番": "通番",
   "事例{tsuban}": "事例{tsuban}",
   "確定日": "確定日",
@@ -349,7 +357,6 @@
       "発症日は陽性確定日からの相対日数"
     ]
   },
-  "退院等": "退院等",
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
   "接触歴等不明者数(7日間移動平均)": "接触歴等不明者数(7日間移動平均)",
   "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
