--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -9,7 +9,25 @@
     "%": "%",
     "入院": "入院",
     "重症": "重症",
-    "宿泊療養": "宿泊療養"
+    "宿泊療養": "宿泊療養",
+    "７日間移動平均": "７日間移動平均",
+    "7MA": "7日間移動平均：集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出（例えば、8月7日は、8月1日から8月7日までの値を平均したもの）",
+    "検査結果の判明日を基準とする": "検査結果の判明日を基準とする",
+    "注": "（注）"
+  },
+  "ExtLink": {
+    "厚生労働省x696": {
+      "text": "厚生労働省 / 医療機関での医療提供体制について （別紙３）[PDF]",
+      "url": "https://www.mhlw.go.jp/content/10900000/000641696.pdf"
+    },
+    "岩手県17_2": {
+      "text": "岩手県 / 第17回本部員会議資料【資料2】[PDF]",
+      "url": "https://www.pref.iwate.jp/_res/projects/default_project/_page_/001/028/231/20200710_03.pdf"
+    },
+    "岩手県19_41": {
+      "text": "岩手県 / 第19回本部員会議資料【資料4-1】[PDF]",
+      "url": "https://www.pref.iwate.jp/_res/projects/default_project/_page_/001/028/231/20200806_04_1_1.pdf#page=2"
+    }
   },
   "Details": {
     "a": [
@@ -112,7 +130,6 @@
   "アクセスしようとしたページが見つかりませんでした。": "アクセスしようとしたページが見つかりませんでした。",
   "ページが移動または削除されたか、URLの入力間違いの可能性があります。": "ページが移動または削除されたか、URLの入力間違いの可能性があります。",
   "トップページへ戻る": "トップページへ戻る",
-  "陽性者数": "陽性者数",
   "日別": "日別",
   "累計": "累計",
   "{date} 更新": "{date} 更新",
@@ -173,14 +190,12 @@
   "1ページ当たり": "1ページ当たり",
   "{itemsLength} 項目中 {pageStart} - {pageStop} ": "{itemsLength} 項目中 {pageStart} - {pageStop} ",
   "現在判明している人数であり、後日修正される場合がある": "現在判明している人数であり、後日修正される場合がある",
-  "７日間移動平均": "７日間移動平均",
   "{date} の数値": "{date} の数値",
   "接触歴等判明者数": "接触歴等判明者数",
   "接触歴等不明者数": "接触歴等不明者数",
   "重症患者数": "重症患者数",
   "確定日別による陽性者数の推移": "確定日別による陽性者数の推移",
   "速報値として公表するものであり、後日確定データとして修正される場合がある": "速報値として公表するものであり、後日確定データとして修正される場合がある",
-  "検査結果の判明日を基準とする": "検査結果の判明日を基準とする",
   "（注）": "（注）",
   "医療機関等が行った検査も含む": "医療機関等が行った検査も含む",
   "速報値として公開するものであり、後日確定データとして修正される場合がある": "速報値として公開するものであり、後日確定データとして修正される場合がある",
@@ -209,8 +224,6 @@
   "次の症状がある方": "次の症状がある方",
   "症状のある方": "症状のある方",
   "対策サイト非公式": "対策サイト非公式",
-  "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出し、折れ線グラフで示す（例えば、8月7日の陽性率は、8月1日から8月7日までの実績平均を用いて算出）",
-  "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を折れ線グラフで示す（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を折れ線グラフで示す（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）",
   "窓口を開設した2020年2月8日からのデータを表示": "窓口を開設した2020年2月8日からのデータを表示",
   "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。",
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
@@ -306,11 +319,9 @@
   "まん延期": "まん延期",
   "岩手県の病床確保計画": "岩手県の病床確保計画",
   "発生初期": "発生初期",
-  "厚生労働省 / 医療機関での医療提供体制について （別紙３）[PDF]": "厚生労働省 / 医療機関での医療提供体制について （別紙３）[PDF]",
   "発生拡大期": "発生拡大期",
   "岩手県の場合、": "岩手県の場合、",
   "未発生期": "未発生期",
-  "岩手県 / 第17回本部員会議資料【資料2】[PDF]": "岩手県 / 第17回本部員会議資料【資料2】[PDF]",
   "重点医療機関等の病床の利用が進んだ": "重点医療機関等の病床の利用が進んだ",
   "一部の医療機関の感染症病床が満床": "一部の医療機関の感染症病床が満床",
   "全ての医療機関の感染症病床が満床": "全ての医療機関の感染症病床が満床",
@@ -320,9 +331,17 @@
   "岩手の最新感染動向": "岩手の最新感染動向",
   "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請",
   "PCR検査の7日間移動平均": "PCR検査の7日間移動平均",
-  "新規陽性者数の7日間移動平均": "新規陽性者数の7日間移動平均",
+  "ConfirmedCasesNumberCard": {
+    "title": "新規陽性者数の7日間移動平均",
+    "a": [
+      "医療機関等が行った検査も含む"
+    ],
+    "b": [
+      "岩手県の医療提供体制等は、厚生労働省の「新たな流行シナリオ」に基づいて整備されている。",
+      "岩手県の場合、陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間続いたら、社会への協力要請（外出自粛要請、営業自粛要請、学校の休校等）をおこなう。"
+    ]
+  },
   "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。": "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。",
-  "岩手県 / 第19回本部員会議資料【資料4-1】[PDF]": "岩手県 / 第19回本部員会議資料【資料4-1】[PDF]",
   "岩手県の1日あたりの検査可能件数は864件": "岩手県の1日あたりの検査可能件数は864件",
   "岩手のCOVID-19が気になる有志": "岩手のCOVID-19が気になる有志",
   "人です。": "人です。",
